change the name of jupyter to phase2_1

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 images.pkl
 label.pkl
 .ipynb_checkpoints
+ML-phase2-soroush_pasandideh-soroush_fathi.zip
+phase2-document-soroush_pasandideh-soroush_fathi.pdf
