--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ images.pkl
 label.pkl
 .ipynb_checkpoints
 ML-phase2-soroush_pasandideh-soroush_fathi.zip
-phase2-document-soroush_pasandideh-soroush_fathi.pdf
+phase2_document.docx
+TODO.md
